# RayTracing

./: .gitignore  CMakeLists.txt  KD_tree_test.cpp  KD_tree_test.h  Readme.md  base_headers.h  main.cpp  rt_parser.cpp
examples/: buggy.irt  hard.irt  orientation.irt  refract.irt  refract2.irt  sc2.rt  scene.rt  test.irt  texture.irt  transparent.irt  untitled.3ds
examples/obj_examples/: buggy.mtl  buggy2.1.mtl  hard.mtl  orientation.mtl  scene.mtl  test.rt
examples/rt_examples/: input.rt  orientation.rt  rc.rt  rc2.rt  rc3.rt  refract.rt  scene.rt  textureModel.rt  transparent.rt
geometry/: BoundingBox.h  IGeometryObject.h  Intersection.h  Plane.h  Polygon.h  Primitives.h  Quadrangle.h  Ray.h  Sphere.h  Triangle.h
objects/: Light.h  Scene.h
parsers/: ISceneParser.h  MyParser.h  ObjLoader.h  RT_file.h  Scanners.h
ray-casting/: KD_Tree.cpp  KD_Tree.h  RayCaster.h
scene/: Light.h  Material.cpp  Material.h  MaterialFactory.h  Scene.h  TextureMaterial.h  Viewport.h
utilities/: ThreadPool.h
